--- a/web/css/dashboardstyle.css
+++ b/web/css/dashboardstyle.css
@@ -9,6 +9,38 @@
 	height:100%;
 }
 
+#overview .panel-body {
+    height:100%;
+}
+
+#income_label {
+    position: relative;
+    left: 31%;
+    float: left;
+}
+#outcome_label {
+    position: relative;
+    float: right;
+    right: 32%;
+}
+
+#bilanz {
+    margin: 25px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#bilanz_number {
+    font-weight: bold;
+    
+    color: #608d00;	/* --- IE --- */
+    color: rgba(96,141,0,0.8);
+    /* ODER */
+/*    color: #d23648;	 --- IE --- 
+    color: rgba(210,54,72,0.8);*/
+}
+
 #list {
 	float:left;
 	right:0;
@@ -20,10 +52,10 @@
 
 /* ==================== BAR GRAPH  ==================== */
 /* ------ container ------ */
-div.css_bar_graph {
+.css_bar_graph {
 	width: 100%;
 	height: 320px;
-	padding: 40px 20px 10px 70px;
+	padding: 40px 20px 10px 20px;
 	/* --- font --- */
 	font-size: 13px;
 	font-family: arial, sans-serif;
@@ -51,59 +83,12 @@ div.css_bar_graph li {
 	margin: 0px;
 	padding: 0px;
 }
-
-/* ==================== Y-AXIS LABELS ==================== */
-/* ------ base ------ */
-div.css_bar_graph ul.y_axis {
-	width: 50px;
-	position: absolute;
-	top: 40px;
-	left: 10px;
-	text-align: right;
-}
-	
-/* ------ labels ------ */
-div.css_bar_graph ul.y_axis li {
-	width: 100%;
-	height: 49px;	/* 50px including border */
-	float: left;
-	color: #888888;
-	/* --- alignment correction --- */
-	border-top: 1px solid transparent;
-	position: relative;
-	top: -13px;	/* value = font height */
-}	
-	
-/* ==================== X-AXIS LABELS  ==================== */
-/* ------ base ------ */
-div.css_bar_graph ul.x_axis {
-	width: 100%;
-	height: 50px;
-	position: absolute;
-	bottom: 0px;
-	left: 90px;
-	text-align: center;
-}
 	
 /* ------ labels ------ */
 div.css_bar_graph ul.x_axis li {
 	display: inline;
 	width: 90px;
 	float: left;
-}
-	
-/* ==================== GRAPH LABEL  ==================== */
-/* ------ base ------ */
-div.css_bar_graph div.label {
-	width: 100%;
-	height: 50px;
-	float: left;
-	margin-top: 20px;
-	text-align: center;
-}
-	
-div.css_bar_graph div.label span {
-	font-weight: bold;
 }
 	
 /* ==================== GRAPH  ==================== */
@@ -156,7 +141,7 @@ div.css_bar_graph div.graph li.bar {
 	width: 50px;
 	float: left;
 	position: absolute;
-	bottom: 70px;
+	bottom: 25px;
 	text-align: center;
 	/* --- css3 --- */
 	/* --- transitions --- */
@@ -238,12 +223,12 @@ div.css_bar_graph div.graph li.bar span {
 }
 	
 /* ------ bars positions ------ */
-div.css_bar_graph div.graph li.nr_1 {
-	left: 110px;
+div.css_bar_graph div.graph li#income_bar {
+    left:33%;
 }
-	
-div.css_bar_graph div.graph li.nr_2	{
-	left: 200px;
+
+div.css_bar_graph div.graph li#outcome_bar {
+    right:33%;
 }
 	
 /* ==================== GREEN BAR  ==================== */
