--- a/web/css/sharedstyle.css
+++ b/web/css/sharedstyle.css
@@ -74,6 +74,10 @@
 	font-size:20px;
 }
 
+#myTopnav {
+    display: none;
+}
+
 /*
     ============
     media querys
@@ -87,8 +91,69 @@
     #content {
         left: 0;
         overflow: auto;
+        top: 130px;
     }
     #header {
-        left: 0;        
+        left: 0;    
+        top: 40px;
     }
+    #myTopnav {
+        display: block;
+    }
+}
+
+
+
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  z-index: 5000;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
